fixed popup submit btn on mobile

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -25,6 +25,7 @@
   font-size: 18px;
   font-weight: 400;
   color: #1A1B22;
+  text-decoration: none;
 }
 
 .footer__links-yandex {
